samples/_failures_safe/1761281758_196cdc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4ead5350.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_4ead5350.c:185:9: error: expected declaration or statement at end of input
  185 |         } else {
      |         ^
./samples/SAFE/__tmp_4ead5350.c:185:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4ead5350.c:185:9: error: expected declaration or statement at end of input
